--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,6 +37,6 @@ jobs:
         run: terraform plan -input=false
         working-directory: modules/env/dev
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve -input=false
-        working-directory: modules/env/dev
+      # - name: Terraform Apply
+      #   run: terraform apply -auto-approve -input=false
+      #   working-directory: modules/env/dev
