Datasets URLs and SNS subscription email as variables

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ TF_VAR_snowflake_role=ACCOUNTADMIN
 TF_VAR_snowflake_warehouse=
 TF_VAR_snowflake_iam_user_arn=
 TF_VAR_snowflake_external_id=
+TF_VAR_reviews_url=
+TF_VAR_meta_url=
+TF_VAR_sns_email=
