dbt pipeline implemented

--- a/dbt/profiles.yml
+++ b/dbt/profiles.yml
@@ -6,7 +6,7 @@ reviews_pipeline_orchestration:
       private_key_passphrase:
       private_key_path: /Users/deelen/Desktop/Data_Engineering/Projects/Capstone/Amazon-Product-Review-Analytics/snowflake_rsa_key.pem
       role: ACCOUNTADMIN
-      schema: CAPSTONE_AMAZON_DB.CAPSTONE_AMAZON_RAW
+      schema: CAPSTONE_AMAZON_RAW
       threads: 4
       type: snowflake
       user: DEELENV
