--- a/dbt/reviews_pipeline_orchestration/dbt_project.yml
+++ b/dbt/reviews_pipeline_orchestration/dbt_project.yml
@@ -22,6 +22,9 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
+on-run-start:
+  - "{{ refresh_external_tables() }}"
+
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
@@ -31,6 +34,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   reviews_pipeline_orchestration:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    staging:
+      +materialized: table
+      +schema: CAPSTONE_AMAZON_STG
+    marts:
+      +materialized: table
+      +schema: CAPSTONE_AMAZON_MART
